fix: vc開始通知の記録先修正